tests/NormalTests/paczka2/big_fuzzy/31068235.err
Error in line 2: UxgTWC A96 74,9
Error in line 1: lPEtN A96 11,0
Error in line 6: lPEtN S369 97,5
Error in line 8: Sywm1KH7Gp8 S369 63,9
Error in line 18: UxgTWC S369 49,30
Error in line 12: lPEtN A96 49,8
Error in line 26: Sywm1KH7Gp8 S156 95,4
Error in line 32: bhNAFcE S369 0,2
Error in line 36: Sywm1KH7Gp8 S369 72,1
Error in line 49: D99 A96 39,3
Error in line 50: D99 S369 74,0
Error in line 56: lPEtN S369 15,0
Error in line 59: lPEtN S982 96,9
Error in line 61: Sywm1KH7Gp8 S156 50,2
Error in line 68: D99 S156 12,0
Error in line 70: Sywm1KH7Gp8 S369 63,7
Error in line 75: S369 A96 60,9
Error in line 85: UxgTWC S156 6,7
Error in line 104: D99 A96 93,3
Error in line 102: xoAhwfRaZo S369 32,4
Error in line 116: S369 A96 32,3
Error in line 117: lPEtN S982 81,9
Error in line 132: lPEtN A96 206,63
Error in line 139: lPEtN A96 255,7
Error in line 145: Sywm1KH7Gp8 A96 28,9
Error in line 151: Sywm1KH7Gp8 S369 44,2
Error in line 157: UxgüWC S982 -1,5
Error in line 153: UxgTWC S982 50,1
Error in line 134: D99 S156 21,1
Error in line 161: D99 A96 60,7
Error in line 162: D99 S982 21,8
Error in line 165: xoAhwfRaZo S982 747,7
Error in line 168: S369 A96 82,4
Error in line 180: xoAhwfRaZo S982 98,3
Error in line 188: bhNAFcE S156 193,55
Error in line 183: lPEtN S156 24,9
Error in line 182: bhNAFcE S156 43,1
Error in line 207: Sywm1KH7Gp8 S156 44,2
Error in line 215: bhNAFcE S369 78,0
Error in line 239: UxgTWC S156 66,8
